--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -169,6 +169,7 @@ harness-symlink: linkfarm-dir
 helper-symlinks: linkfarm-dir
 	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/include, helper-inc)
 	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/source, helper-src)
+	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/stubs, helper-stubs)
 
 
 fill-linkfarm: harness-symlink enc-sdk-symlinks common-symlinks common-helper-symlinks helper-symlinks
