--- a/.cbmc-batch/jobs/aws_cryptosdk_edk_list_init/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_edk_list_init/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You may not use
 # this file except in compliance with the License. A copy of the License is
@@ -18,14 +18,29 @@ sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
+#########
+# Local vars
 
 #########
-ENTRY = MultiKeyringNew_harness
+ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
 
+AWS_DEEP_CHECKS = 1
+
+CBMCFLAGS +=
+
+DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
+DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/error.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/multi_keyring.c
+DEPENDENCIES += $(SRCDIR)/c-common-src/math.c
+DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/edk.c
+
+ENTRY = aws_cryptosdk_edk_list_init_harness
+
+REMOVE_FUNCTION_BODIES += --remove-function-body nondet_compare
+
+UNWINDSET += 
 
 ###########
 include ../Makefile.common
