Added proof harnesses for aws_cryptosdk_md_* functions.
* Created harnesses for aws_cryptosdk_md_{init,update,finish,abort,size}
* Added pre and postconditions to these functions in cipher_openssl.c
* Created stubs for OpenSSL functions
* Added aws_cryptosdk_md_context_is_valid predicate to cipher module
* Modified Makefile to have CBMC check for memory leaks

--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -40,6 +40,7 @@ HARNESS_NAME ?= $(ENTRY)_harness.c
 CBMCFLAGS += --bounds-check
 CBMCFLAGS += --div-by-zero-check
 CBMCFLAGS += --float-overflow-check
+CBMCFLAGS += --memory-leak-check
 CBMCFLAGS += --nan-check
 CBMCFLAGS += --pointer-check
 CBMCFLAGS += --pointer-overflow-check
@@ -186,7 +187,6 @@ clean:
 veryclean: clean
 	$(RM) -r html
 	$(RM) -r link-farm
-
 gitclean: veryclean
 	$(RM) -r $(COMMONDIR)
 
