--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -103,7 +103,6 @@ helper-symlinks: linkfarm-dir
 fill-linkfarm: harness-symlink enc-sdk-symlinks common-symlinks common-helper-symlinks helper-symlinks
 
 $(ENTRY)1.goto: fill-linkfarm $(OBJS)
-		printenv
 		$(GOTO_CC) --function harness -o $@ $(OBJS)
 
 $(ENTRY)3.goto: $(ENTRY)1.goto
@@ -146,10 +145,10 @@ $(ENTRY)8.goto: $(ENTRY)7.goto
 		2>&1 | tee $(ENTRY)8.log ; exit $${PIPESTATUS[0]}
 
 $(ENTRY).goto: $(ENTRY)8.goto
+	echo $LD_LIBRARY_PATH       
 	cp $< $@
 
 %.goto : %.c fill-linkfarm
-	printenv
 	$(GOTO_CC) -o $@ $(INC) $(CFLAGS) $<
 
 goto: $(ENTRY).goto 
