--- a/.cbmc-batch/jobs/Makefile.common
+++ b/.cbmc-batch/jobs/Makefile.common
@@ -25,12 +25,12 @@ INC += -I/usr/local/opt/openssl@1.1/include/
 
 CBMC_OBJECT_BITS ?= 8
 CBMCFLAGS +=  --object-bits $(CBMC_OBJECT_BITS)
-DEF += -DCBMC_OBJECT_BITS=$(CBMC_OBJECT_BITS)
-DEF += -DCBMC=1
+DEFINES += -DCBMC_OBJECT_BITS=$(CBMC_OBJECT_BITS)
+DEFINES += -DCBMC=1
 
-OPT += 
+OPT +=
 
-CFLAGS += $(CFLAGS2) $(DEF) $(OPT) 
+CFLAGS += $(CFLAGS2) $(DEFINES) $(OPT)
 
 LINKFARM = $(abspath ./link-farm)
 
@@ -54,6 +54,8 @@ UNWIND ?= 0
 SIMPLIFY ?= 0
 
 ABSTRACTIONS ?=
+
+DEPENDENT_GOTOS = $(patsubst %.c,%.goto,$(DEPENDENCIES))
 
 ################################################################
 # makes a symlink if one doesn't already exist
@@ -86,13 +88,14 @@ common-symlinks: common-git linkfarm-dir
 common-helper-symlinks: common-git linkfarm-dir
 	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/include, c-common-helper-inc)
 	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/source, c-common-helper-src)
+	$(call make_symlink, $(LINKFARM), $(COMMON_HELPERDIR)/stubs, c-common-helper-stubs)
 
 enc-sdk-symlinks: linkfarm-dir
 	$(call make_symlink, $(LINKFARM), $(SDKDIR)/include, c-enc-sdk-inc)
 	$(call make_symlink, $(LINKFARM), $(SDKDIR)/source, c-enc-sdk-src)
 
 harness-symlink: linkfarm-dir
-	$(call make_symlink, $(LINKFARM), ../$(HARNESS_NAME), $(HARNESS_NAME)); 
+	$(call make_symlink, $(LINKFARM), ../$(HARNESS_NAME), $(HARNESS_NAME));
 
 helper-symlinks: linkfarm-dir
 	$(call make_symlink, $(LINKFARM), $(HELPERDIR)/include, helper-inc)
@@ -101,8 +104,8 @@ helper-symlinks: linkfarm-dir
 
 fill-linkfarm: harness-symlink enc-sdk-symlinks common-symlinks common-helper-symlinks helper-symlinks
 
-$(ENTRY)1.goto: fill-linkfarm $(OBJS)
-	$(GOTO_CC) --function harness -o $@ $(OBJS)
+$(ENTRY)1.goto: fill-linkfarm $(DEPENDENT_GOTOS)
+	$(GOTO_CC) --function harness -o $@ $(DEPENDENT_GOTOS)
 
 $(ENTRY)3.goto: $(ENTRY)1.goto
 	 $(GOTO_INSTRUMENT) $(ABSTRACTIONS) --add-library $< $@ \
@@ -149,7 +152,7 @@ $(ENTRY).goto: $(ENTRY)8.goto
 %.goto : %.c fill-linkfarm
 	$(GOTO_CC) -o $@ $(INC) $(CFLAGS) $<
 
-goto: $(ENTRY).goto 
+goto: $(ENTRY).goto
 
 cbmc.log: $(ENTRY).goto
 	cbmc $(CBMCFLAGS) --trace $< 2>&1 | tee $@
@@ -178,7 +181,7 @@ report: cbmc.log property.xml coverage.xml
 
 clean:
 	$(RM) $(GOTOS)
-	$(RM) $(OBJS) $(ENTRY).goto
+	$(RM) $(DEPENDENT_GOTOS) $(ENTRY).goto
 	$(RM) $(ENTRY)[0-9].goto $(ENTRY)[0-9].log
 	$(RM) cbmc.log property.xml coverage.xml TAGS
 	$(RM) *~ \#*
