--- a/.cbmc-batch/jobs/aws_cryptosdk_multi_keyring_new/cbmc-batch.yaml
+++ b/.cbmc-batch/jobs/aws_cryptosdk_multi_keyring_new/cbmc-batch.yaml
@@ -1,17 +1,4 @@
-# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
-#
-# Licensed under the Apache License, Version 2.0 (the "License"). You may not use
-# this file except in compliance with the License. A copy of the License is
-# located at
-#
-#     http://aws.amazon.com/apache2.0/
-#
-# or in the "license" file accompanying this file. This file is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
-# implied. See the License for the specific language governing permissions and
-# limitations under the License.
-
 jobos: ubuntu16
-cbmcflags: "--bounds-check;--pointer-check;--signed-overflow-check;--unsigned-overflow-check;--pointer-overflow-check;--div-by-zero-check;--unwinding-assertions"
-goto: MultiKeyringNew.goto
+cbmcflags: "--bounds-check;--div-by-zero-check;--float-overflow-check;--nan-check;--pointer-check;--pointer-overflow-check;--signed-overflow-check;--undefined-shift-check;--unsigned-overflow-check;--unwind;1;--unwinding-assertions;--object-bits;8"
+goto: MultiKeyringNew_harness.goto
 expected: "SUCCESSFUL"
