--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_record_init_clone/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_record_init_clone/Makefile
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 ###########
-sinclude ../Makefile.string
+include ../Makefile.string
 
 CBMC_UNWINDSET += --unwindset memcmp.0:$(shell echo $$((1 + $(MAX_STRING_LEN))))
 
