--- a/.cbmc-batch/jobs/aws_cryptosdk_string_dup/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_string_dup/Makefile
@@ -14,23 +14,22 @@
 ###########
 include ../Makefile.string
 
-CBMC_UNWINDSET += --unwindset memcmp.0:17
+CBMC_UNWINDSET += --unwindset memcmp.0:$(shell echo $$((1 + $(MAX_STRING_LEN))))
 
 CBMCFLAGS +=
 
-ENTRY = aws_cryptosdk_string_dup
+ENTRY = aws_cryptosdk_string_dup_harness
 
-OBJS +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.goto
-OBJS +=	$(SRCDIR)/c-common-helper-src/proof_allocators.goto
-OBJS +=	$(SRCDIR)/c-common-src/byte_buf.goto
-OBJS +=	$(SRCDIR)/c-common-src/common.goto
-OBJS +=	$(SRCDIR)/c-common-src/error.goto
-OBJS +=	$(SRCDIR)/c-common-src/string.goto
-OBJS +=	$(SRCDIR)/c-enc-sdk-src/cipher.goto
-OBJS +=	$(SRCDIR)/c-enc-sdk-src/utils.goto
-OBJS += $(COMMON_HELPERDIR)/stubs/memcmp_override.goto
-OBJS += $(SRCDIR)/$(ENTRY)_harness.goto
-OBJS += $(SRCDIR)/helper-src/make_common_data_structures.goto
+DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.c
+DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.c
+DEPENDENCIES +=	$(SRCDIR)/c-common-src/byte_buf.c
+DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.c
+DEPENDENCIES +=	$(SRCDIR)/c-common-src/error.c
+DEPENDENCIES +=	$(SRCDIR)/c-common-src/string.c
+DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/cipher.c
+DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/utils.c
+DEPENDENCIES += $(COMMON_HELPERDIR)/stubs/memcmp_override.c
+DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
 ###########
 
