Updated proogs for add_record_c_str with new is_valid functions

--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_add_record_c_str/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_add_record_c_str/Makefile
@@ -14,9 +14,10 @@
 ###########
 include ../Makefile.aws_array_list
 include ../Makefile.aws_byte_buf
+include ../Makefile.string
 
 
-CBMC_UNWINDSET += --unwindset strlen.0:$(shell echo $$((1 + $(MAX_BUFFER_SIZE))))
+CBMC_UNWINDSET += --unwindset strlen.0:$(shell echo $$((1 + $(MAX_BUFFER_SIZE)))),aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE))))
 
 CBMCFLAGS +=
 
