--- a/docker-images/visualcpp2017/Dockerfile
+++ b/docker-images/visualcpp2017/Dockerfile
@@ -18,4 +18,17 @@ RUN setx /M PATH "%PATH%;C:\Program Files (x86)\Microsoft Visual Studio\2017\Bui
 # Test msbuild can be accessed without path
 RUN msbuild -version
 
+RUN powershell -NoProfile -InputFormat None -Command `
+    cd c:\vcpkg; `
+    .\bootstrap-vcpkg.bat; `
+    .\vcpkg update; `
+    .\vcpkg integrate install; `
+    c:\cleanup-vcpkg.ps1
+
+RUN powershell -NoProfile -InputFormat None -Command `
+    cd c:\vcpkg; `
+    .\vcpkg install curl:x86-windows openssl:x86-windows curl:x64-windows openssl:x64-windows; `
+    c:\cleanup-vcpkg.ps1
+
+
 CMD [ "cmd.exe" ]
