Docker compose image creation setup

--- a/docker-images/amazonlinux/2.0/Dockerfile
+++ b/docker-images/amazonlinux/2.0/Dockerfile
@@ -11,25 +11,30 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM ubuntu:latest
+FROM amazonlinux:2.0.20190823.1
 
-# Needed for setup-apt-cache.sh
-ADD https://mirrors.kernel.org/ubuntu/pool/main/n/net-tools/net-tools_1.60+git20161116.90da8a0-2ubuntu1_amd64.deb /tmp
-ADD https://mirrors.kernel.org/ubuntu/pool/universe/n/netcat/netcat-traditional_1.10-40_amd64.deb /tmp
-RUN dpkg -i /tmp/net-tools_*.deb /tmp/netcat-*.deb
-
-ADD bin/setup-apt-cache.sh /usr/local/bin/
-ADD bin/setup-apt.sh /usr/local/bin/
-RUN setup-apt-cache.sh
-RUN setup-apt.sh
+COPY bin/* /usr/local/bin/
 
 ENV PATH=/usr/local/bin:/usr/bin:/bin
-
 ENV CC=/usr/bin/gcc
 ENV CXX=/usr/bin/g++
 ENV CFLAGS=
 ENV CXXFLAGS=
 ENV LDFLAGS=
+
+ARG OPENSSL_TAG
+ENV OPENSSL_TAG=${OPENSSL_TAG}
+ENV OPENSSL_PLATFORM=linux-x86_64
+
+RUN yum update -y
+RUN yum groupinstall -y "Development tools" && yum install -y valgrind json-c-devel ninja-build wget openssl libtool perl-core zlib-devel cmake3 openssl-devel libcurl-devel && yum clean all && rm -rf /var/cache/yum
+# Package maintainers need a sturn talking to.
+RUN /usr/sbin/alternatives --install /usr/bin/cmake cmake /usr/bin/cmake3 20 \
+--slave /usr/bin/ctest ctest /usr/bin/ctest3 \
+--slave /usr/bin/cpack cpack /usr/bin/cpack3 \
+--slave /usr/bin/ccmake ccmake /usr/bin/ccmake3 \
+--family cmake
+
 
 # We're going to install our own version of openssl at /deps/install/lib - this lets us test against multiple openssl versions.
 # However, this also means we need to install our own version of curl, as curl links against libssl and the C++ SDK links
@@ -41,17 +46,10 @@ ENV LDFLAGS=
 # on our special versions of openssl/libcurl (or to depend on them at all for that matter).
 ENV LDFLAGS="-Wl,-rpath -Wl,/deps/install/lib -Wl,-rpath -Wl,/deps/shared/install/lib -L/deps/install/lib -L/deps/shared/install/lib"
 
-ENV OPENSSL_TAG=OpenSSL_1_1_1a
+#Setting OPENSSL_TAG in the docker compose file
+ARG OPENSSL_TAG
+ENV OPENSSL_TAG=${OPENSSL_TAG}
 ENV OPENSSL_PLATFORM=linux-x86_64
 
-ADD bin/apt-install-pkgs /usr/local/bin/
-ADD bin/install-shared-deps.sh /usr/local/bin/
-RUN install-shared-deps.sh
-
-ADD bin/install-aws-deps.sh /usr/local/bin
-RUN install-aws-deps.sh
-
-ADD bin/codebuild-test.sh /usr/local/bin/
-
-# Remove apt proxy configuration before publishing the dockerfile
-RUN rm -f /etc/apt/apt.conf.d/99proxy
+RUN /usr/local/bin/install-shared-deps.sh
+RUN /usr/local/bin/install-aws-deps.sh
