--- a/docker-images/amazonlinux/2.0/buildspec.yml
+++ b/docker-images/amazonlinux/2.0/buildspec.yml
@@ -10,27 +10,28 @@
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
-version: '0.2'
+version: 0.2
+
 phases:
   install:
     runtime-versions:
       docker: 18
     commands:
-    - echo Logging in to Amazon ECR...
-    - aws --version
-    - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-    - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - echo Logging in to Amazon ECR...
+      - aws --version
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     labels:
-      openssl_tag: $OPENSSL_TAG
-      distro: amazonlinux
-      distro_release: '2.0'
-      description: Buld testing image for amazonlinux_2.0
+      "openssl_tag": $OPENSSL_TAG
+      "distro": "Amazonlinux"
+      "distro_release": "2.0"
+      "description": "Build Testing image for Amazonlinux 2.0"
     commands:
-    - echo Building Docker image at `date`
-    - docker-compose -f docker-images/docker-compose.yml build amazonlinux_2.0_$OPENSSL_TAG
+      - echo Building Docker image at `date`
+      - docker-compose -f docker-images/docker-compose.yml build amazonlinux_2.0_$OPENSSL_TAG
   post_build:
     commands:
-    - echo Build completed on `date`
-    - echo Pushing the Docker images.
-    - docker push $REPOSITORY_URI:amazonlinux_2.0_$OPENSSL_TAG
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:amazonlinux_2.0_$OPENSSL_TAG
