--- a/docker-images/docker-compose.yml
+++ b/docker-images/docker-compose.yml
@@ -12,45 +12,129 @@
 # limitations under the License.
 version: '3.7'
 services:
-  ubuntu_18.04:
+  ubuntu_18.04_OpenSSL_1_1_1-stable:
     build:
       args:
-        OPENSSL_TAG: ${OPENSSL_TAG}
+        OPENSSL_TAG: OpenSSL_1_1_1-stable
       context: ./ubuntu
       dockerfile: 18.04/Dockerfile
-    image: ${REPOSITORY_URI}:ubuntu_18.04_${OPENSSL_TAG}
-  ubuntu_16.04:
+    image: ${REPOSITORY_URI}:ubuntu_18.04_OpenSSL_1_1_1-stable
+  ubuntu_18.04_OpenSSL_1_1_0-stable:
     build:
       args:
-        OPENSSL_TAG: ${OPENSSL_TAG}
+        OPENSSL_TAG: OpenSSL_1_1_0-stable
+      context: ./ubuntu
+      dockerfile: 18.04/Dockerfile
+    image: ${REPOSITORY_URI}:ubuntu_18.04_OpenSSL_1_1_0-stable
+  ubuntu_18.04_OpenSSL_1_0_2-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_0_2-stable
+      context: ./ubuntu
+      dockerfile: 18.04/Dockerfile
+    image: ${REPOSITORY_URI}:ubuntu_18.04_OpenSSL_1_0_2-stable
+  ubuntu_16.04_OpenSSL_1_1_1-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_1_1-stable
       context: ./ubuntu
       dockerfile: 16.04/Dockerfile
-    image: ${REPOSITORY_URI}:ubuntu_16.04_${OPENSSL_TAG}
-  ubuntu_14.04:
+    image: ${REPOSITORY_URI}:ubuntu_16.04_OpenSSL_1_1_1-stable
+  ubuntu_16.04_OpenSSL_1_1_0-stable:
     build:
       args:
-        OPENSSL_TAG: ${OPENSSL_TAG}
+        OPENSSL_TAG: OpenSSL_1_1_0-stable
+      context: ./ubuntu
+      dockerfile: 16.04/Dockerfile
+    image: ${REPOSITORY_URI}:ubuntu_16.04_OpenSSL_1_1_0-stable
+  ubuntu_16.04_OpenSSL_1_0_2-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_0_2-stable
+      context: ./ubuntu
+      dockerfile: 16.04/Dockerfile
+    image: ${REPOSITORY_URI}:ubuntu_16.04_OpenSSL_1_0_2-stable
+  ubuntu_14.04_OpenSSL_1_1_1-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_1_1-stable
       context: ./ubuntu
       dockerfile: 14.04/Dockerfile
-    image: ${REPOSITORY_URI}:ubuntu_14.04_${OPENSSL_TAG}
-  amazonlinux_2018.03:
+    image: ${REPOSITORY_URI}:ubuntu_14.04_OpenSSL_1_1_1-stable
+  ubuntu_14.04_OpenSSL_1_1_0-stable:
     build:
       args:
-        OPENSSL_TAG: ${OPENSSL_TAG}
+        OPENSSL_TAG: OpenSSL_1_1_0-stable
+      context: ./ubuntu
+      dockerfile: 14.04/Dockerfile
+    image: ${REPOSITORY_URI}:ubuntu_14.04_OpenSSL_1_1_0-stable
+  ubuntu_14.04_OpenSSL_1_0_2-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_0_2-stable
+      context: ./ubuntu
+      dockerfile: 14.04/Dockerfile
+    image: ${REPOSITORY_URI}:ubuntu_14.04_OpenSSL_1_0_2-stable
+  amazonlinux_2018.03_OpenSSL_1_1_1-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_1_1-stable
       context: ./amazonlinux
       dockerfile: 2018.03/Dockerfile
-    image: ${REPOSITORY_URI}:amazonlinux_2018.03_${OPENSSL_TAG}
-  amazonlinux_2.0:
+    image: ${REPOSITORY_URI}:amazonlinux_2018.03_OpenSSL_1_1_1-stable
+  amazonlinux_2018.03_OpenSSL_1_1_0-stable:
     build:
       args:
-        OPENSSL_TAG: ${OPENSSL_TAG}
+        OPENSSL_TAG: OpenSSL_1_1_0-stable
+      context: ./amazonlinux
+      dockerfile: 2018.03/Dockerfile
+    image: ${REPOSITORY_URI}:amazonlinux_2018.03_OpenSSL_1_1_0-stable
+  amazonlinux_2018.03_OpenSSL_1_0_2-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_0_2-stable
+      context: ./amazonlinux
+      dockerfile: 2018.03/Dockerfile
+    image: ${REPOSITORY_URI}:amazonlinux_2018.03_OpenSSL_1_0_2-stable
+  amazonlinux_2.0_OpenSSL_1_1_1-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_1_1-stable
       context: ./amazonlinux
       dockerfile: 2.0/Dockerfile
-    image: ${REPOSITORY_URI}:amazonlinux_2.0_${OPENSSL_TAG}
-  centos_7:
+    image: ${REPOSITORY_URI}:amazonlinux_2.0_OpenSSL_1_1_1-stable
+  amazonlinux_2.0_OpenSSL_1_1_0-stable:
     build:
       args:
-        OPENSSL_TAG: ${OPENSSL_TAG}
+        OPENSSL_TAG: OpenSSL_1_1_0-stable
+      context: ./amazonlinux
+      dockerfile: 2.0/Dockerfile
+    image: ${REPOSITORY_URI}:amazonlinux_2.0_OpenSSL_1_1_0-stable
+  amazonlinux_2.0_OpenSSL_1_0_2-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_0_2-stable
+      context: ./amazonlinux
+      dockerfile: 2.0/Dockerfile
+    image: ${REPOSITORY_URI}:amazonlinux_2.0_OpenSSL_1_0_2-stable
+  centos_7_OpenSSL_1_1_1-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_1_1-stable
       context: ./centos
       dockerfile: 7/Dockerfile
-    image: ${REPOSITORY_URI}:centos_7_${OPENSSL_TAG}
+    image: ${REPOSITORY_URI}:centos_7_OpenSSL_1_1_1-stable
+  centos_7_OpenSSL_1_1_0-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_1_0-stable
+      context: ./centos
+      dockerfile: 7/Dockerfile
+    image: ${REPOSITORY_URI}:centos_7_OpenSSL_1_1_0-stable
+  centos_7_OpenSSL_1_0_2-stable:
+    build:
+      args:
+        OPENSSL_TAG: OpenSSL_1_0_2-stable
+      context: ./centos
+      dockerfile: 7/Dockerfile
+    image: ${REPOSITORY_URI}:centos_7_OpenSSL_1_0_2-stable
