--- a/codebuild/codebuild.config
+++ b/codebuild/codebuild.config
@@ -12,7 +12,7 @@ bucket_prefix: cesdkCodeBuildCache
 image : 636124823696.dkr.ecr.us-west-2.amazonaws.com/linux-docker-images:ubuntu_18.04_OpenSSL_1_1_1-stable
 env_type: LINUX_CONTAINER
 compute_type: BUILD_GENERAL1_LARGE
-buildspec: codebuild/ubuntu_latest.yml
+buildspec: codebuild/ubuntu-latest-x64.yml
 source_location: https://github.com/aws/aws-encryption-sdk-c.git
 source_type : GITHUB
 source_clonedepth: 1
