feature: Allow templating in config file for CFN script.

--- a/codebuild/codebuild.config
+++ b/codebuild/codebuild.config
@@ -8,7 +8,7 @@ account_number: 636124823696
 bucket_prefix: cesdkCodeBuildCache
 
 #Reusable templates - use the snippet:NAME
-[UbuntuBoilerplateL]
+[UbuntuBoilerplate]
 image : 636124823696.dkr.ecr.us-west-2.amazonaws.com/linux-docker-images:ubuntu_18.04_OpenSSL_1_1_1-stable
 env_type: LINUX_CONTAINER
 compute_type: BUILD_GENERAL1_LARGE
@@ -19,6 +19,17 @@ source_clonedepth: 1
 source_version: 
 
 # The prefix CodeBuild: is required for the script to build this
-[CodeBuild:esdkCubuntu1804OpenSSL111]
-snippet: UbuntuBoilerplateL
-env: DOIT=true
+[CodeBuild:esdkCubuntu1804OpenSSL111GCC7]
+snippet: UbuntuBoilerplate
+env: DOIT=true GCC=7
+
+[CodeBuild:csdk-ubuntu1804OpenSSL111GCC6]
+image : 636124823696.dkr.ecr.us-west-2.amazonaws.com/linux-docker-images:ubuntu_18.04_OpenSSL_1_1_1-stableGCC6
+env_type: LINUX_CONTAINER
+compute_type: BUILD_GENERAL1_LARGE
+buildspec: codebuild/ubuntu-latest-x64.yml
+source_location: https://github.com/aws/aws-encryption-sdk-c.git
+source_type : GITHUB
+source_clonedepth: 1
+source_version: 
+env: DOIT=true GCC=6
