Fix arch for ubuntu18

--- a/docker-images/ubuntu/18.04/Dockerfile
+++ b/docker-images/ubuntu/18.04/Dockerfile
@@ -11,7 +11,7 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM i386/ubuntu:18.04
+FROM ubuntu:18.04
 
 # Needed for setup-apt-cache.sh
 ADD https://mirrors.kernel.org/ubuntu/pool/main/n/net-tools/net-tools_1.60+git20161116.90da8a0-2ubuntu1_amd64.deb /tmp
