--- a/.cbmc-batch/jobs/aws_cryptosdk_md_init/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_init/Makefile
@@ -20,6 +20,8 @@ include ../Makefile.local_default
 UNWINDSET += 
 
 # Adds check for memory leaks for this proof
+# Turning this flag on globally would require all proofs to carefully release objects, which they don't do.
+# But might as well do it when its easy
 CBMCFLAGS += --memory-leak-check
 
 ENTRY = aws_cryptosdk_md_init_harness
