--- a/.cbmc-batch/jobs/aws_cryptosdk_md_abort/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_abort/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You may not use
 # this file except in compliance with the License. A copy of the License is
@@ -20,12 +20,14 @@ include ../Makefile.local_default
 UNWINDSET += 
 
 # Adds check for memory leaks for this proof
+# Turning this flag on globally would require all proofs to carefully release objects, which they don't do.
+# But might as well do it when its easy
 CBMCFLAGS += --memory-leak-check
 
 ENTRY = aws_cryptosdk_md_abort_harness
 
-DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.goto
+DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.goto
+DEPENDENCIES += $(SRCDIR)/c-common-src/common.goto
 DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/cipher_openssl.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/cbmc_invariants.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.goto
