--- a/.cbmc-batch/jobs/aws_cryptosdk_md_size/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_md_size/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You may not use
 # this file except in compliance with the License. A copy of the License is
@@ -16,10 +16,6 @@
 sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
-
-UNWINDSET +=
-
-CBMCFLAGS +=
 
 ENTRY = aws_cryptosdk_md_size_harness
 
