--- a/.cbmc-batch/jobs/aws_cryptosdk_sig_sign_start/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_sig_sign_start/Makefile
@@ -17,12 +17,11 @@ sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
-UNWINDSET += strcmp.0:11, aws_base64_encode.0:22 # computed according to MAX_PUBKEY_SIZE and the implementation of aws_base64_encode
-
-# Added check for memory leaks
-CBMCFLAGS += --memory-leak-check
+UNWINDSET += strcmp.0:11 # computed according to MAX_PUBKEY_SIZE
 
 ENTRY = aws_cryptosdk_sig_sign_start_harness
+
+ABSTRACTIONS += $(SRCDIR)/helper-stubs/aws_base64_encode.c
 
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.goto
 DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.goto
@@ -42,6 +41,8 @@ DEPENDENCIES += $(SRCDIR)/helper-src/openssl/ec_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/err_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/evp_override.goto
 DEPENDENCIES += $(SRCDIR)/helper-src/openssl/objects_override.goto
+
+REMOVE_FUNCTION_BODY += --remove-function-body aws_base64_encode
 
 ###########
 
