CBMC proof for edk_list_copy_all

--- a/.cbmc-batch/jobs/aws_cryptosdk_edk_list_copy_all/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_edk_list_copy_all/Makefile
@@ -20,9 +20,7 @@ include ../Makefile.local_default
 #########
 # Local vars
 NUM_ELEMS = 2
-ITEM_SIZE = 4
-
-#2,4 = 11 min
+ITEM_SIZE = 40
 
 #########
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
@@ -31,9 +29,7 @@ CBMCFLAGS +=
 
 DEFINES += -DNUM_ELEMS=$(NUM_ELEMS)
 DEFINES += -DITEM_SIZE=$(ITEM_SIZE)
-DEFINES += -DARRAY_LIST_TYPE="struct aws_cryptosdk_edk"
 DEFINES += -DAWS_NO_STATIC_IMPL
-DEFINES += -DARRAY_LIST_TYPE_HEADER=\"aws/cryptosdk/edk.h\"
 
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
@@ -47,7 +43,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-src/math.c
 DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/list_utils.c
 DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
-ENTRY = list_copy_all_harness
+ENTRY = aws_cryptosdk_edk_list_copy_all_harness
 
 REMOVE_FUNCTION_BODIES += --remove-function-body aws_array_list_is_valid
 addone = $(shell echo $$(( $(1) + 1)))
