--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_copy_all/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_copy_all/Makefile
@@ -19,8 +19,7 @@ include ../Makefile.local_default
 
 #########
 # Local vars
-NUM_ELEMS = 2
-ITEM_SIZE = 40
+NUM_ELEMS = 2 #Gets full coverage. Property check takes 3m20s on my laptop. 
 
 #########
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
@@ -28,13 +27,13 @@ ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
 CBMCFLAGS +=
 
 DEFINES += -DNUM_ELEMS=$(NUM_ELEMS)
-DEFINES += -DITEM_SIZE=$(ITEM_SIZE)
 DEFINES += -DAWS_NO_STATIC_IMPL
 
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/array_list.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/error.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/math.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
@@ -45,8 +44,10 @@ DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
 ENTRY = aws_cryptosdk_keyring_trace_copy_all_harness
 
+# The original aws_array_list_is_valid() has a 64 bit multiplication.
+# CBMC performance dies trying to do all those multiplications.
+# Replace with a stub until we can fix this issue.
 REMOVE_FUNCTION_BODIES += --remove-function-body aws_array_list_is_valid
-addone = $(shell echo $$(( $(1) + 1)))
 
 UNWINDSET += list_copy_all.5:$(call addone,$(NUM_ELEMS)) 
 UNWINDSET += list_copy_all.6:$(call addone,$(NUM_ELEMS)) 
