--- a/.cbmc-batch/jobs/aws_cryptosdk_transfer_list/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_transfer_list/Makefile
@@ -21,13 +21,10 @@ include ../Makefile.local_default
 # Local vars
 NUM_ELEMS = 2
 ITEM_SIZE = 4
-
-#2,4 = 11 min
+# Sufficient to get full coverage. 2,4 takes 11 min on my machine
 
 #########
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
-#ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/memcmp_override_no_op.c
-#ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/aws_array_list_defined_type.c
 
 CBMCFLAGS +=
 
@@ -41,6 +38,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/array_list.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/error.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/math.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
@@ -51,8 +49,10 @@ DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
 ENTRY = aws_cryptosdk_transfer_list_harness
 
+# The original aws_array_list_is_valid() has a 64 bit multiplication.
+# CBMC performance dies trying to do all those multiplications.
+# Replace with a stub until we can fix this issue.
 REMOVE_FUNCTION_BODIES += --remove-function-body aws_array_list_is_valid
-addone = $(shell echo $$(( $(1) + 1)))
 
 UNWINDSET += aws_cryptosdk_transfer_list.4:$(call addone,$(NUM_ELEMS)) 
 ###########
