--- a/.cbmc-batch/jobs/list_copy_all/Makefile
+++ b/.cbmc-batch/jobs/list_copy_all/Makefile
@@ -19,10 +19,8 @@ include ../Makefile.local_default
 
 #########
 # Local vars
-NUM_ELEMS = 2
-ITEM_SIZE = 4
-
-#2,4 = 11 min
+NUM_ELEMS = 2 # Sufficient for full coverage
+ITEM_SIZE = 4 # Sufficient for full coverage
 
 #########
 ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
@@ -39,6 +37,7 @@ DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/array_list.c
+DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/error.c
 DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/math.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/array_list.c
 DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
@@ -49,8 +48,8 @@ DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 
 ENTRY = list_copy_all_harness
 
+# See the comment in the harness about the stub
 REMOVE_FUNCTION_BODIES += --remove-function-body aws_array_list_is_valid
-addone = $(shell echo $$(( $(1) + 1)))
 
 UNWINDSET += list_copy_all.5:$(call addone,$(NUM_ELEMS)) 
 UNWINDSET += list_copy_all.6:$(call addone,$(NUM_ELEMS)) 
