--- a/cbmc/proofs/Makefile.local_default
+++ b/cbmc/proofs/Makefile.local_default
@@ -12,20 +12,26 @@
 # limitations under the License.
 
 ################################################################
-# Define locations and binaries
+# Setup paths to binaries
+# By default, use the version on your path; this can be overriden to select particular
+# versions of the tools. /usr/bin/goto-analyzer or ${HOME}/sw/goto-analyzer etc
 
+BATCH ?= cbmc-batch
+GOTO_ANALYZER ?= goto-analyzer
 GOTO_CC ?= goto-cc
 GOTO_INSTRUMENT ?= goto-instrument
-GOTO_ANALYZER ?= goto-analyzer
-BATCH ?= cbmc-batch
 VIEWER ?= cbmc-viewer
 
-SRCDIR ?= $(abspath ./link-farm)
+################################################################
+# Setup directory aliases
 BASEDIR ?= $(abspath ../../../..)
-COMMON_REPO_NAME ?= aws-c-common-for-cryptosdk-proofs
 COMMONDIR ?= $(BASEDIR)/$(COMMON_REPO_NAME)
 COMMON_HELPERDIR ?= $(COMMONDIR)/.cbmc-batch
+COMMON_REPO_NAME ?= aws-c-common-for-cryptosdk-proofs
+LINKFARM ?= $(abspath ./link-farm)
 SDKDIR ?= $(abspath ../../..)
-HELPERDIR ?= $(SDKDIR)/.cbmc-batch
+SRCDIR ?= $(abspath ./link-farm)
+
+HELPERDIR ?= $(SDKDIR)/cbmc
 
 addone = $(shell echo $$(( $(1) + 1)))
