Add CBMC template Makefile submodule
This commit adds the CBMC template Makefile [1] as a submodule to this
repository. The submodule contains a common, standardized Makefile for
doing CBMC proofs, as well as other auxiliary files. This will simplify
proofs for proof-writers and allow for easier proof maintenance.

[1] https://github.com/awslabs/aws-templates-for-cbmc-proofs

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "verification/cbmc/aws-c-common"]
 	path = verification/cbmc/aws-c-common
 	url = https://github.com/awslabs/aws-c-common
+[submodule "verification/cbmc/aws-templates-for-cbmc-proofs"]
+	path = verification/cbmc/aws-templates-for-cbmc-proofs
+	url = https://github.com/awslabs/aws-templates-for-cbmc-proofs.git
