Add local Makefile definitions for CBMC proofs
This commit adds E-SDK-specific defines and includes to
Makefile-project-defines

--- a/verification/cbmc/.gitignore
+++ b/verification/cbmc/.gitignore
@@ -1,2 +1,8 @@
-jobs/*/link-farm
-jobs/*/html
+# Emitted when running CBMC proofs
+proofs/**/logs
+proofs/**/gotos
+proofs/**/report
+proofs/**/html
+
+# Emitted by CBMC Viewer
+TAGS-*
